# Golazo-Copilots

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
KustoMapper/: KustoMapper.pyproj  KustoMapper.sln  README.md  pyproject.toml  requirements.txt
KustoMapper/WorkItems/MCDEMO-001/: MCDEMO-001-User-Story.md
KustoMapper/WorkItems/MCDEMO-001/Design/: MCDEMO-001-Design-Doc.md  MCDEMO-001-Review-Comments.md  MCDEMO-001-Test-Cases.md
KustoMapper/WorkItems/MCDEMO-001/RoleDecisionNotes/: MCDEMO-001-builder.md  MCDEMO-001-developer.md  MCDEMO-001-documentor.md  MCDEMO-001-program-manager.md  MCDEMO-001-refactor.md  MCDEMO-001-reviewer.md  MCDEMO-001-tester.md
KustoMapper/WorkItems/MCDEMO-002/: MCDEMO-002-User-Story.md
KustoMapper/WorkItems/MCDEMO-002/Design/: MCDEMO-002-Design-Doc.md  MCDEMO-002-Review-Comments.md  MCDEMO-002-Test-Cases.md
KustoMapper/WorkItems/MCDEMO-002/RoleDecisionNotes/: MCDEMO-002-builder.md  MCDEMO-002-developer.md  MCDEMO-002-documentor.md  MCDEMO-002-project-owner-assistant.md  MCDEMO-002-refactor.md  MCDEMO-002-reviewer.md  MCDEMO-002-tester.md
KustoMapper/WorkItems/MCDEMO-003/: MCDEMO-003-User-Story.md
KustoMapper/WorkItems/MCDEMO-003/Design/: MCDEMO-003-Design-Doc.md  MCDEMO-003-Review-Comments.md  MCDEMO-003-Test-Cases.md
KustoMapper/WorkItems/MCDEMO-003/RoleDecisionNotes/: MCDEMO-003-builder.md  MCDEMO-003-developer.md  MCDEMO-003-documentor.md  MCDEMO-003-project-owner-assistant.md  MCDEMO-003-refactor.md  MCDEMO-003-reviewer.md  MCDEMO-003-tester.md
KustoMapper/src/kustomapper/: __main__.py  main.py
KustoMapper/src/kustomapper/adapters/: base.py  kusto_adapter.py
KustoMapper/src/kustomapper/analysis/: __init__.py  relationship_detector.py
KustoMapper/src/kustomapper/gui/: graph_view.py  (+1 more)
KustoMapper/tests/: test_graph_view.py  test_kusto_adapter.py  test_models.py  test_relationship_detector.py  test_schema_cache.py
(+421 files in other folders)
